--- a/web-view/index.html
+++ b/web-view/index.html
@@ -123,13 +123,13 @@
         /* Mobile Responsive Design for Header */
         @media (max-width: 768px) {
             .title-grid {
-                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+                grid-template-columns: repeat(2, 1fr);
                 gap: 15px;
                 padding: 15px;
             }
 
             .title-card {
-                padding: 15px;
+                padding: 10px;
             }
 
             .title-card h3 {
@@ -138,6 +138,13 @@
 
             .title-card p {
                 font-size: 12px;
+            }
+
+            .title-card img {
+                width: 100%;
+                height: auto;
+                border-radius: 4px;
+                margin-bottom: 10px;
             }
 
             /* Header responsive adjustments */
@@ -158,13 +165,13 @@
 
         @media (max-width: 480px) {
             .title-grid {
-                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                grid-template-columns: repeat(2, 1fr);
                 gap: 10px;
                 padding: 10px;
             }
 
             .title-card {
-                padding: 10px;
+                padding: 8px;
             }
 
             .title-card h3 {
@@ -173,6 +180,13 @@
 
             .title-card p {
                 font-size: 11px;
+            }
+
+            .title-card img {
+                width: 100%;
+                height: auto;
+                border-radius: 4px;
+                margin-bottom: 8px;
             }
 
             /* Header responsive adjustments for mobile */
@@ -198,7 +212,7 @@
         <div style="position: absolute; top: 10%; left: 10%; width: 200px; height: 200px; background: radial-gradient(circle, rgba(255,105,180,0.1) 0%, transparent 70%); border-radius: 50%; animation: float 6s ease-in-out infinite;"></div>
         <div style="position: absolute; top: 60%; right: 15%; width: 150px; height: 150px; background: radial-gradient(circle, rgba(255,20,147,0.08) 0%, transparent 70%); border-radius: 50%; animation: float 8s ease-in-out infinite reverse;"></div>
         <div style="position: absolute; bottom: 20%; left: 20%; width: 100px; height: 100px; background: radial-gradient(circle, rgba(220,20,60,0.06) 0%, transparent 70%); border-radius: 50%; animation: float 7s ease-in-out infinite;"></div>
-        <div style="display: flex; align-items: center; justify-content: center; margin: 0; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%); padding: 5px 0; backdrop-filter: blur(10px); border: 3px solid transparent; border-radius: 0 0 15px 15px; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%) padding-box, linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4) border-box; box-shadow: 0 0 20px rgba(255, 105, 180, 0.3), 0 0 40px rgba(255, 20, 147, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1); animation: borderGlow 3s ease-in-out infinite;">
+        <div style="display: flex; align-items: center; justify-content: center; margin: 0; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%); padding: 5px 0; backdrop-filter: blur(10px); border-radius: 0 0 15px 15px; box-shadow: 0 0 20px rgba(255, 105, 180, 0.3), 0 0 40px rgba(255, 20, 147, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1); animation: borderGlow 3s ease-in-out infinite;">
 
             <img src="logo.jpg" alt="Gái xinh Việt Nam Logo" style="max-width: 80px; height: auto; margin-right: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3); position: relative; z-index: 2;">
             <h1 style="color: #ffffff; margin: 10px 0; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.5em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate; position: relative; z-index: 2;">Gái xinh Việt Nam</h1>
